# Rehabilitation-system

./: .gitignore  README.md  Updown_mediapipe.py  app.py  index.html  pyproject.toml  rehab_camera.py  requirements-dev.txt  requirements.txt
rehab_app/: __init__.py  analyzer.py  camera.py  geometry.py
rehab_assistant/: __init__.py  exercises.py  geometry.py  smoothing.py
scripts/: download_pose_model.py
static/css/: app.css
static/js/: app.js
tests/: test_exercises.py  test_geometry.py
